tests/macros/order_select/extension.stderr
error: option `extension` does not exist for kind `order_select`
 --> tests/macros/order_select/extension.rs:2:49
  |
2 |     let q = requestty::questions![OrderSelect { extension: todo!() }];
  |                                                 ^^^^^^^^^
