tests/macros/order_select/extension.rs
fn main() {
    let q = requestty::questions![OrderSelect { extension: todo!() }];
}
